Fix styles for collapse block

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -436,3 +436,19 @@ figcaption {
   font-size: small;
   color: grey;
 }
+
+/* Collapse blocks */
+
+.collapse_block {
+  background-color: #eaeaea;
+  padding: 1% 2%;
+}
+
+.collapse_block__title {
+  font-weight: bold;
+}
+
+.collapse_block__content {
+  margin-top: 2%;
+  padding: 2% 1% 0 5%;
+}
